numbering and title cases, further nb prog

--- a/notebooks/00_getting_started.ipynb
+++ b/notebooks/00_getting_started.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "*More information about CapyMOA can be found at* https://www.capymoa.org\n",
     "\n",
-    "**last update on 12/11/2025**"
+    "**last update on 28/11/2025**"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "id": "deff0053-1130-43f1-bf69-02bd34bc8e03",
    "metadata": {},
    "source": [
-    "## 1. Classification\n",
+    "## 0.1 Classification\n",
     "\n",
     "* Classification for data streams traditionally assumes instances are available\n",
     "  to the classifier in an incremental fashion and labels become available before\n",
@@ -110,7 +110,7 @@
    "id": "5934db15-b6e8-4084-978f-4af71b34df46",
    "metadata": {},
    "source": [
-    "### 1.1 High-level evaluation functions\n",
+    "### 0.1.1 High-level evaluation functions\n",
     "\n",
     "* If our goal is just to evaluate learners, it would be tedious to keep writing **test-then-train loops**. \n",
     "Thus, it makes sense to encapsulate that loop inside **high-level evaluation functions**. \n",
@@ -446,7 +446,7 @@
    "id": "54fd75ab-1671-4d9e-a1ea-a3f0f07b8b63",
    "metadata": {},
    "source": [
-    "### 1.2 Comparing results among classifiers\n",
+    "### 0.1.2 Comparing results among classifiers\n",
     "\n",
     "* CapyMOA provides ```plot_windowed_results``` as an easy visualisation function for quickly comparing **windowed metrics**.\n",
     "* In the example below, we create three classifiers: HoeffdingAdaptiveTree, HoeffdingTree and AdaptiveRandomForest, and plot the results using ```plot_windowed_results```.\n",
@@ -527,7 +527,7 @@
    "id": "0af53c62-ce89-49eb-a7cb-6c9c09f4e6f9",
    "metadata": {},
    "source": [
-    "## 2. Regression\n",
+    "## 0.2 Regression\n",
     "\n",
     "* Regression algorithms have APIs very similar to classification algorithms. We can use the same high-level evaluation and visualisation functions for regression and classification.\n",
     "* Similar to classification, we can also use MOA objects through a generic API."
@@ -588,7 +588,7 @@
    "id": "d05f9870-2238-41db-9602-d676e2efadf5",
    "metadata": {},
    "source": [
-    "## 3. Concept Drift\n",
+    "## 0.3 Concept drift\n",
     "\n",
     "* One of the most challenging and defining aspects of data streams is the phenomenon known as **concept drifts**.\n",
     "* In CapyMOA, we designed the simplest and most complete API for simulating, visualising and assessing concept drifts.\n",
@@ -601,7 +601,7 @@
    "id": "071f25af-0673-4377-8912-0f0f5f43380c",
    "metadata": {},
    "source": [
-    "### 3.1 Plotting Drift Detection results\n",
+    "### 0.3.1 Plotting drift detection results\n",
     "\n",
     "* This example uses the DriftStream building API, precisely the **positional version** where drifts are specified according to their exact location in the stream.\n",
     "* **Integration with the visualisation function.** The DriftStream object carries meta-information about the drift which is passed along the stream and thus becomes available to ```plot_windowed_results```.\n",
