--- a/notebooks/01_evaluation.ipynb
+++ b/notebooks/01_evaluation.ipynb
@@ -22,7 +22,7 @@
                         "\n",
                         "*More information about CapyMOA can be found at* https://www.capymoa.org.\n",
                         "\n",
-                        "**last update on 12/11/2025**"
+                        "**last update on 28/11/2025**"
                   ]
             },
             {
@@ -31,7 +31,7 @@
                   "id": "df79e7d7-bde3-4b59-8479-a44247b3c26f",
                   "metadata": {},
                   "source": [
-                        "## 1. The difference between evaluators\n",
+                        "## 1.1 The difference between evaluators\n",
                         "\n",
                         "* The following example implements a **while loop** that updates a ```ClassificationWindowedEvaluator``` and a ```ClassificationEvaluator``` for the same learner. \n",
                         "* The ```ClassificationWindowedEvaluator``` updates the metrics according to tumbling windows which 'forgets' older correct and incorrect predictions. This allows us to observe how well the learner performs in shorter windows. \n",
@@ -133,7 +133,7 @@
                   "id": "c61735c4-c41a-443c-be3c-e6cc3b526395",
                   "metadata": {},
                   "source": [
-                        "## 2. High-level evaluation functions\n",
+                        "## 1.2 High-level evaluation functions\n",
                         "\n",
                         "In CapyMOA, for supervised learning, there is one primary evaluation function designed to handle the manipulation of evaluators, i.e. the `prequential_evaluation()`. This function streamlines the process, ensuring users need not directly update them. Essentially, this function executes the evaluation loop and updates the relevant evaluators:\n",
                         "\n",
@@ -161,7 +161,7 @@
                   "id": "99802e5d-c85c-448a-86ca-93910a245666",
                   "metadata": {},
                   "source": [
-                        "### 2.1 prequential_evaluation()\n",
+                        "### 1.2.1 prequential_evaluation()\n",
                         "\n",
                         "The `prequential_evaluation()` function performs a windowed evaluation and a cumulative evaluation at once. Internally, it maintains a `ClassificationWindowedEvaluator` (for the windowed metrics) and ```ClassificationEvaluator``` (for the cumulative metrics). This allows us to have access to the **cumulative** and **windowed** results without running two separate evaluation functions. \n",
                         "\n",
@@ -729,7 +729,7 @@
                   "id": "309212f3-8986-482b-88ac-85f862325bfe",
                   "metadata": {},
                   "source": [
-                        "### 2.4 Evaluating a single stream using multiple learners\n",
+                        "### 1.2.2 Evaluating a single stream using multiple learners\n",
                         "\n",
                         "```prequential_evaluation_multiple_learners()``` further encapsulates experiments by executing multiple learners on a single stream. \n",
                         "\n",
@@ -798,7 +798,7 @@
                   "id": "120f118c-d8a5-4d10-aad1-a75a2ac122d8",
                   "metadata": {},
                   "source": [
-                        "## 3. Regression\n",
+                        "## 1.3 Regression\n",
                         "\n",
                         "* We introduce a simple example using regression just to show how similar it is to assess regressors using the **high-level evaluation functions**.\n",
                         "* In the example below, we just use ```prequential_evaluation()``` but it would work with ```cumulative_evaluation()``` and ```windowed_evaluation()``` as well.\n",
@@ -869,7 +869,7 @@
                   "id": "410145fa-5203-4c79-b86f-8ce891691751",
                   "metadata": {},
                   "source": [
-                        "### 3.1 Evaluating a single stream using multiple learners (Regression)\n",
+                        "### 1.3.1 Evaluating a single stream using multiple learners (Regression)\n",
                         "\n",
                         "* ```prequential_evaluation_multiple_learners``` also works for multiple regressors; the example below shows how it can be used. "
                   ]
@@ -966,7 +966,7 @@
                   "id": "f1fffd6b-7421-4c07-9cca-dde220164387",
                   "metadata": {},
                   "source": [
-                        "### 3.2 Plotting predictions vs. ground truth over time (Regression)\n",
+                        "### 1.3.2 Plotting predictions vs. ground truth over time (Regression)\n",
                         "\n",
                         "* In regression it is sometimes desirable to plot **predictions vs. ground truth** to observe what is happening with the stream. If we create a custom loop and use the evaluators directly, it is trivial to store the ground truth and predictions, and then proceed to plot them. However, to make people's life easier the ```plot_predictions_vs_ground_truth``` function can be used.\n",
                         "\n",
