--- a/notebooks/02_sklearn.ipynb
+++ b/notebooks/02_sklearn.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "*More information about CapyMOA can be found at* https://www.capymoa.org.\n",
     "\n",
-    "**last update on 20/11/2025**"
+    "**last update on 28/11/2025**"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "id": "948e37ec-fbfd-43ea-a04a-7c11215452cc",
    "metadata": {},
    "source": [
-    "## 1. Using raw sklearn objects\n",
+    "## 2.1 Using raw sklearn objects\n",
     "\n",
     "* This example shows a model from scikit-learn can be used with our ```Instance``` representation in a simple **test-then-train loop**.\n",
     "* In this case, we need to adapt data to accommodate what the sklearn expects."
@@ -118,7 +118,7 @@
    "id": "eb71a0ef-44ff-4168-b5dd-62530f74d112",
    "metadata": {},
    "source": [
-    "## 2. Using a generic SKClassifier wrapper\n",
+    "## 2.2 Using a generic SKClassifier wrapper\n",
     "\n",
     "* Instead of sklearn's ```SGDClassifier``` here we use the CapyMOA wrapper ```SKClassifier``` on a **test-then-train loop**.\n",
     "* There is also a ```SKRegressor``` available in CapyMOA."
@@ -184,7 +184,7 @@
    "id": "a4ff1ac9-07a1-4a0b-9bb5-f2afa79dd928",
    "metadata": {},
    "source": [
-    "## 3. Using prequential evaluation and SKClassifier\n",
+    "## 2.3 Using prequential evaluation and SKClassifier\n",
     "* Instead of an instance loop we may use the ```prequential_evaluation()``` function."
    ]
   },
@@ -237,7 +237,7 @@
    "id": "91da6c75-2f60-4bd9-9afb-ddf01ba5e253",
    "metadata": {},
    "source": [
-    "## 4. Further abstractions\n",
+    "## 2.4 Further abstractions\n",
     "\n",
     "* We can wrap popular algorithms to make then even easier to use.\n",
     "* So far, one can use the following wrappers:\n",
