--- a/notebooks/03_pytorch.ipynb
+++ b/notebooks/03_pytorch.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "*More information about CapyMOA can be found at* https://www.capymoa.org.\n",
     "\n",
-    "**last update on 20/11/2025**"
+    "**last update on 28/11/2025**"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "id": "cd9a931c-7b86-4bd6-8cda-179154e4b513",
    "metadata": {},
    "source": [
-    "## 1. Setup\n",
+    "## 3.1 Setup\n",
     "* Sets random seed for reproducibility.\n",
     "* Sets PyTorch network ."
    ]
@@ -44,7 +44,7 @@
     }
    },
    "source": [
-    "### 1.1 Set random seeds"
+    "### 3.1.1 Set random seeds"
    ]
   },
   {
@@ -86,7 +86,7 @@
     }
    },
    "source": [
-    "### 1.2 Define network structure\n",
+    "### 3.1.2 Define network structure\n",
     "* Here, the network uses the CPU device."
    ]
   },
@@ -157,7 +157,7 @@
     }
    },
    "source": [
-    "### 1.3 Using an instance loop\n",
+    "### 3.1.3 Using an instance loop\n",
     "* Model is initialised after receiving the first instance."
    ]
   },
@@ -262,7 +262,7 @@
    "id": "2803eaab-eb2b-4c6e-a246-67f9ac71f70f",
    "metadata": {},
    "source": [
-    "## 2. PyTorchClassifier\n",
+    "## 3.2 PyTorchClassifier\n",
     "* Defining a `PyTorchClassifier` using the CapyMOA API makes it **compatible** with CapyMOA functions like `prequential_evaluation()` without losing the **flexibility** of specifying the `architecture` and the `training` method.\n",
     "* The model is initialised after receiving the first instance.\n",
     "* `PyTorchClassifier` is based on the `capymoa.base` ```Classifier``` abstract class.\n",
@@ -398,7 +398,7 @@
     }
    },
    "source": [
-    "### 2.2 Using PyTorchClassifier + prequential_evaluation\n",
+    "### 3.2.2 Using PyTorchClassifier + prequential_evaluation\n",
     "\n",
     "* We can access information about the stream through the `schema` directly, from the example below: \n",
     "```python\n",
@@ -469,7 +469,7 @@
     }
    },
    "source": [
-    "## 3. How to use a PyTorch dataset with a CapyMOA classifier\n",
+    "## 3.3 How to use a PyTorch dataset with a CapyMOA classifier\n",
     "* One may want to use various PyTorch datasets with different CapyMOA classifiers.\n",
     "* In this example we use PyTorch Dataset + prequential evaluation + CapyMOA Classifier.\n",
     "\n",
