--- a/notebooks/04_drift_streams.ipynb
+++ b/notebooks/04_drift_streams.ipynb
@@ -6,7 +6,7 @@
    "id": "48637040-3764-4a73-8e79-642fc1f9db09",
    "metadata": {},
    "source": [
-    "# 4. Simulating Concept Drifts with the DriftStream API\n",
+    "# 4. Simulating concept drifts with the DriftStream API\n",
     "\n",
     "This tutorial demonstrates how to use the DriftStream API in CapyMOA:\n",
     "\n",
@@ -20,7 +20,7 @@
     "\n",
     "*More information about CapyMOA can be found at* https://www.capymoa.org.\n",
     "\n",
-    "**last update on 20/11/2025**"
+    "**last update on 28/11/2025**"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "id": "b295e120-8050-48a3-93b5-39efc295102b",
    "metadata": {},
    "source": [
-    "## 1. CapyMOA synthetic generators\n",
+    "## 4.1 CapyMOA synthetic generators\n",
     "\n",
     "* In this example, we show how to use `RandomTreeGenerator` to generate a synthetic stream."
    ]
@@ -84,7 +84,7 @@
    "id": "ceb17a1a-8f52-42ac-b1b2-3e11dbabcd44",
    "metadata": {},
    "source": [
-    "## 2. CapyMOA DriftStream Builder API\n",
+    "## 4.2 CapyMOA DriftStream builder API\n",
     "\n",
     "* MOA uses a recursive approach to specify concept drift locations like ```CDS(CDS(SEA(1), SEA(2), 1000), SEA(3), 2000)``` where we specify the drift **position** and the **width** of a drift (if it is a Gradual Drift).\n",
     "\n",
@@ -131,7 +131,7 @@
    "id": "90c0598f-8aec-4d7f-9aa0-bfb71fb53400",
    "metadata": {},
    "source": [
-    "### 2.1 DriftStream prelude: the raw MOA version\n",
+    "### 4.2.1 DriftStream prelude: the raw MOA version\n",
     "\n",
     "* We first show how it is done using MOA's API, so that one can compare it with CapyMOA syntax.\n",
     "* We simulate the following drifting stream using a traditional recursive MOA syntax:\n",
@@ -195,7 +195,7 @@
    "id": "afd21639-1797-4995-b04c-dafe66d1095a",
    "metadata": {},
    "source": [
-    "### 2.2 DriftStream ```position``` + ```width```\n",
+    "### 4.2.2 DriftStream `position` + `width`\n",
     "\n",
     "* Specifying drift location using the *first* version.\n",
     "* We can use either position + width or start + end to define GradualDrifts in this approach.\n",
@@ -285,7 +285,7 @@
    "id": "7f233c22-d543-4606-b175-08a76040d6cf",
    "metadata": {},
    "source": [
-    "#### 2.2.1 Obtaining metadata about drift from a MOA Stream\n",
+    "### 4.2.3 Obtaining metadata about drift from a MOA Stream\n",
     "\n",
     "* Besides composing a drifting stream, the `DriftStream` object also holds information about the drifts. \n",
     "* The metadata about the drifts can be used for quickly investigating where and how many `Drifts` a particular `Stream` object has associated with it.\n",
@@ -372,7 +372,7 @@
    "id": "d7b86531-6765-4ee4-bbc7-60386f3ff214",
    "metadata": {},
    "source": [
-    "## 2.3 DriftStream ```range``` \n",
+    "### 4.2.4 DriftStream ```range``` \n",
     "\n",
     "* This version of the DriftStream builder uses the concept of specfying the number of instances in each concept and drift, i.e. ```concept num_instances``` and ```drift num_instances```\n",
     "\n",
@@ -387,9 +387,9 @@
    "id": "92cc4281407f615d",
    "metadata": {},
    "source": [
-    "## 2.4 RecurrentConceptDriftStream \n",
+    "## 4.3 RecurrentConceptDriftStream \n",
     "\n",
-    "### 2.4.1 Generate a stream with recurrent concepts"
+    "### 4.3.1 Generate a stream with recurrent concepts"
    ]
   },
   {
@@ -476,7 +476,7 @@
    "id": "d36145c62fe1cce8",
    "metadata": {},
    "source": [
-    "###  2.4.2 Use recurrent concept drift API to generate recurrent concepts\n",
+    "### 4.3.2 Use recurrent concept drift API to generate recurrent concepts\n",
     "* The API adds concept meta information for plotting which is not available in the previous example. "
    ]
   },
