--- a/notebooks/06_advanced_API.ipynb
+++ b/notebooks/06_advanced_API.ipynb
@@ -6,7 +6,7 @@
             "id": "a48e9306-f459-4d8a-8608-9bd71a7600ae",
             "metadata": {},
             "source": [
-                "# 6. Exploring Advanced Features\n",
+                "# 6. Exploring advanced features\n",
                 "\n",
                 "This notebook is targeted at advanced users that want to access MOA objects directly using CapyMOA's Python API. \n",
                 "\n",
@@ -23,7 +23,7 @@
                 "\n",
                 "*More information about CapyMOA can be found at* https://www.capymoa.org.\n",
                 "\n",
-                "**last update on 20/11/2025**"
+                "**last update on 28/11/2025**"
             ]
         },
         {
@@ -31,7 +31,7 @@
             "id": "d2bb536e-4716-48fe-bf9b-05455b9e5a85",
             "metadata": {},
             "source": [
-                "## 1. Using any MOA learner\n",
+                "## 6.1 Using any MOA learner\n",
                 "\n",
                 "* **CapyMOA gives you access to any MOA classifier or regressor**.\n",
                 "\n",
@@ -385,7 +385,7 @@
             "id": "3c102052-1a19-4f30-b3d1-f0163cab6af0",
             "metadata": {},
             "source": [
-                "### 1.1 Checking the hyperparameters for the MOA CLI\n",
+                "### 6.1.1 Checking the hyperparameters for the MOA CLI\n",
                 "\n",
                 "* MOA objects can be parametrized using the MOA CLI (Command Line Interface)\n",
                 "* Sometimes you may not know the relevent parameters for a `moa_learner`,  `moa_learner.cli_help()` presents all the hyperparameters available for the `moa_learner` object."
@@ -448,7 +448,7 @@
             "id": "55d070de-8697-4f98-a11b-eab4e3d5c281",
             "metadata": {},
             "source": [
-                "## 2. Using preprocessing from MOA (filters)\n",
+                "## 6.2 Using preprocessing from MOA (filters)\n",
                 "\n",
                 "We are working on a more user friendly API for preprocessing, this example just shows how one can do that using MOA filters from CapyMOA.\n",
                 "\n",
@@ -493,6 +493,8 @@
                 "from moa.streams import FilteredStream\n",
                 "\n",
                 "stream = Electricity()\n",
+                "\n",
+                "# If we are running with low resources then we use a smaller dataset\n",
                 "elec_file = f\"electricity{'_tiny' if is_nb_fast() else ''}.arff\"\n",
                 "cli = f\"-s (ArffFileStream -f {get_download_dir() / elec_file}) -f NormalisationFilter\"\n",
                 "print(cli)\n",
@@ -511,7 +513,9 @@
                 ")\n",
                 "ob_results = prequential_evaluation(stream=stream, learner=ob_learner)\n",
                 "\n",
-                "print(f\"\\tAccuracy with online normalisation: {ob_results_norm['cumulative'].accuracy()}\")\n",
+                "print(\n",
+                "    f\"\\tAccuracy with online normalisation: {ob_results_norm['cumulative'].accuracy()}\"\n",
+                ")\n",
                 "print(f\"\\tAccuracy without normalisation: {ob_results['cumulative'].accuracy()}\")"
             ]
         },
@@ -520,7 +524,7 @@
             "id": "f74c58fb-dd90-49f4-8b4f-81a9e36e47ff",
             "metadata": {},
             "source": [
-                "## 3. Comparing a MOA and sklearn models\n",
+                "## 6.3 Comparing a MOA and sklearn models\n",
                 "\n",
                 "* This example shows how simple it is to compare MOA and sklearn regressors. \n",
                 "* We use wrappers for the sake of this example.\n",
@@ -580,7 +584,7 @@
             "id": "df198282-7a87-4e03-ba0b-b3de3ccf9163",
             "metadata": {},
             "source": [
-                "## 4. Creating Python learners with MOA Objects\n",
+                "## 6.4 Creating Python learners with MOA Objects\n",
                 "\n",
                 "* This follows the example from `05_new_learner` which shows how to create a custom online bagging implementation.\n",
                 "* Here we also create an online bagging implementation, but the `base_learner` is a MOA class instead."
@@ -604,6 +608,7 @@
                 "from moa.classifiers.trees import HoeffdingTree\n",
                 "from collections import Counter\n",
                 "import numpy as np\n",
+                "\n",
                 "\n",
                 "class CustomOnlineBagging(Classifier):\n",
                 "    def __init__(\n",
@@ -667,7 +672,7 @@
             "id": "c971ac60-0aa5-4295-be56-bcb6ee1ccb40",
             "metadata": {},
             "source": [
-                "### 4.1 Testing the custom online bagging\n",
+                "### 6.4.1 Testing the custom online bagging\n",
                 "\n",
                 "* We choose to use an HoeffdingAdaptiveTree from MOA as the base learner.\n",
                 "* We also specify the CLI commands to configure the base learner."
@@ -721,7 +726,7 @@
             "id": "62e3e70a-2422-4b3a-b2bf-b8f96a3efdeb",
             "metadata": {},
             "source": [
-                "## 5. Using TensorBoard with PyTorch in CapyMOA\n",
+                "## 6.5 Using TensorBoard with PyTorch in CapyMOA\n",
                 "\n",
                 "* One can use TensorBoard to visualise logged data in an online fashion.\n",
                 "* We go through all the steps below, including installing TensorBoard."
@@ -732,7 +737,7 @@
             "id": "8fda8006-e0e9-4547-a2c9-8fc43d16ca57",
             "metadata": {},
             "source": [
-                "### 5.1 Install TensorBoard\n",
+                "### 6.5.1 Install TensorBoard\n",
                 "\n",
                 "Clear any logs from previous runs.\n",
                 "\n",
@@ -784,7 +789,7 @@
             "id": "b1e64bd6-b0c7-4296-aee7-a29985a9da21",
             "metadata": {},
             "source": [
-                "### 5.2  PyTorchClassifier\n",
+                "### 6.5.2  PyTorchClassifier\n",
                 "\n",
                 "* We define `PyTorchClassifier` and `NeuralNetwork` classes similarly to those from **Tutorial 3**: `Using Pytorch with CapyMOA`."
             ]
@@ -813,6 +818,7 @@
                 "# Get cpu device for training.\n",
                 "device = \"cpu\"\n",
                 "\n",
+                "\n",
                 "# Define model\n",
                 "class NeuralNetwork(nn.Module):\n",
                 "    def __init__(self, input_size=0, number_of_classes=0):\n",
@@ -830,6 +836,7 @@
                 "        x = self.flatten(x)\n",
                 "        logits = self.linear_relu_stack(x)\n",
                 "        return logits\n",
+                "\n",
                 "\n",
                 "class PyTorchClassifier(Classifier):\n",
                 "    def __init__(\n",
@@ -923,7 +930,7 @@
             "id": "2b166ade-23b3-445c-a382-6f0cb6231d66",
             "metadata": {},
             "source": [
-                "### 5.3  PyTorchClassifier + the test-then-train loop + TensorBoard\n",
+                "### 6.5.3 PyTorchClassifier + the test-then-train loop + TensorBoard\n",
                 "\n",
                 "* Here we use an instance loop to log relevant information to TensorBoard.\n",
                 "* This information can be viewed while the processing is happening using TensorBoard."
@@ -1003,7 +1010,7 @@
             "id": "9da96643-1900-41e8-96aa-6af460194ac6",
             "metadata": {},
             "source": [
-                "### 5.4 Run TensorBoard\n",
+                "### 6.5.4 Run TensorBoard\n",
                 "\n",
                 "Now, start TensorBoard, specifying the root log directory you used above. Argument `logdir` points to directory where TensorBoard will look to find event files that it can display. TensorBoard will recursively walk through the directory structure located at `logdir`, looking for `.*tfevents.*` files.\n",
                 "\n",
@@ -1020,7 +1027,7 @@
             "id": "38b1f9ce-c3a1-4944-8cb1-f2a84cd4ff25",
             "metadata": {},
             "source": [
-                "## 6. Creating a synthetic stream with concept drifts from MOA\n",
+                "## 6.6 Creating a synthetic stream with concept drifts from MOA\n",
                 "\n",
                 "* Here we demonstrate the level of API flexibility that is expected from experienced MOA users.\n",
                 "* To use the API like this, the user must be familiar with how concept drifts are simulated in MOA.\n",
@@ -1086,7 +1093,7 @@
             "id": "0f2f9fb6-0994-4f3f-aaf3-c73b09847019",
             "metadata": {},
             "source": [
-                "## 7. Drift, Multi-threaded Ensemble and Results\n",
+                "## 6.7 Drift, multi-threaded ensembles and results\n",
                 "\n",
                 "* Generate a stream with 3 drifts: 2 abrupt and one gradual.\n",
                 "* Evaluate utilising test-then-train (cumulative) and windowed evaluation.\n",
@@ -1418,7 +1425,7 @@
             "id": "2ce76f5f-a427-4ef1-a8ba-14dc4b65a4ac",
             "metadata": {},
             "source": [
-                "## 8. AutoML with AutoClass\n",
+                "## 6.8 AutoML with AutoClass\n",
                 "\n",
                 "The following example shows how to use the `AutoClass` algorithm with CapyMOA. \n",
                 "* AutoClass is configured using a json configuration file `settings_autoclass.json` and a list of classifiers `base_classifiers`.\n",
@@ -1519,7 +1526,7 @@
             "id": "dbeb8d3b-9527-49dc-8550-e3ceb0f09965",
             "metadata": {},
             "source": [
-                "### 8.1 AutoClass alternative syntax\n",
+                "### 6.8.1 AutoClass alternative syntax\n",
                 "\n",
                 "Another way to configure the learners is by using a list of string `base_classifiers` representing the MOA classifiers."
             ]
