--- a/notebooks/07_pipelines.ipynb
+++ b/notebooks/07_pipelines.ipynb
@@ -6,7 +6,7 @@
    "id": "b773bf8e-c420-44e1-80a6-99f75dd12268",
    "metadata": {},
    "source": [
-    "# 7. Pipelines and Transformers\n",
+    "# 7. Pipelines and transformers\n",
     "\n",
     "This notebook showcases the current version of data processing pipelines in CapyMOA. \n",
     "\n",
@@ -15,11 +15,13 @@
     "* Pipelines bundle transformers, drift detectors, and learners (classifiers, regressors, clustering algorithms etc.)\n",
     "* Some pipelines act as classifiers or regressors.\n",
     "\n",
+    "---\n",
+    "\n",
     "<span style=\"color:red\"><b>Please note that this feature is still under development; some functionality might not yet be available or change in future releases.</b></span>\n",
     "\n",
     "*More information about CapyMOA can be found at* https://www.capymoa.org.\n",
     "\n",
-    "**last update on 20/11/2025**"
+    "**last update on 28/11/2025**"
    ]
   },
   {
@@ -44,7 +46,7 @@
    "id": "471f4d99",
    "metadata": {},
    "source": [
-    "### PipelineElements and their structure\n",
+    "### 7.1.1 PipelineElements and their structure\n",
     "\n",
     "We currently support four types of pipeline elements: `ClassifierPipelineElement`, `RegressorPipelineElement`, `TransformerPipelineElement`, and `DriftDetectorPipelineElement`. They all implement the `PipelineElement` protocol, which provides two functions:\n",
     "\n",
@@ -66,7 +68,7 @@
    "id": "7c219b1a",
    "metadata": {},
    "source": [
-    "#### TransformerPipelineElement\n",
+    "#### 7.1.2 TransformerPipelineElement\n",
     "\n",
     "This element is initialized with a CapyMOA `Transformer`.\n",
     "- `pass_forward` transforms and returns the provided instance.\n",
@@ -78,7 +80,7 @@
    "id": "00dfbaa1",
    "metadata": {},
    "source": [
-    "#### ClassifierPipelineElement and RegressorPipelineElement\n",
+    "#### 7.1.3 ClassifierPipelineElement and RegressorPipelineElement\n",
     "\n",
     "These elements are initialised with a CapyMOA `Classifier` or `Regressor`.\n",
     "- `pass_forward` trains the learner on the provided instance.\n",
@@ -90,7 +92,7 @@
    "id": "7175624c",
    "metadata": {},
    "source": [
-    "#### DriftDetectorPipelineElement\n",
+    "#### 7.1.4 DriftDetectorPipelineElement\n",
     "\n",
     "This element is initialised with a CapyMOA `BaseDriftDetector` and a callable `prepare_drift_detector_input_func` that takes an instance as input and returns the input for the change detector.\n",
     "- `pass_forward` does nothing.\n",
@@ -104,7 +106,7 @@
    "id": "47e5116d",
    "metadata": {},
    "source": [
-    "#### BasePipeline (and inheritors)\n",
+    "#### 7.1.5 BasePipeline (and inheritors)\n",
     "Pipelines themselves are pipeline elements, allowing you to combine them into larger pipelines.\n",
     "- `pass_forward` calls `pass_forward` on all its elements.\n",
     "- `pass_forward_predict` calls `pass_forward_predict` on all its elements."
@@ -402,7 +404,7 @@
    "id": "df255274-83cd-41df-a1da-04778bc427aa",
    "metadata": {},
    "source": [
-    "### Alternative syntax\n",
+    "### 7.4.1 Alternative syntax\n",
     "\n",
     "* An alternative syntax to define the pipeline is shown below.\n",
     "* Since the pipeline behaves like a learner, it can be used with high-level evaluation functions like `prequential_evaluation`."
@@ -572,7 +574,7 @@
    "id": "4ac8bbd3-009d-4af3-b6a4-23e004f1ba6f",
    "metadata": {},
    "source": [
-    "### Monitoring classifier accuracy"
+    "### 7.6.1 Monitoring classifier accuracy"
    ]
   },
   {
@@ -694,7 +696,7 @@
    "id": "0392072a-79e6-41d2-9a0c-f72358e936b0",
    "metadata": {},
    "source": [
-    "### Monitoring drift in the first input feature\n",
+    "### 7.6.2 Monitoring drift in the first input feature\n",
     "\n",
     "We now show how one can easily monitor an input feature by adapting `get_drift_detector_input_func` and the position of the drift detector in the pipeline. \n",
     "\n",
