--- a/notebooks/08_prediction_interval.ipynb
+++ b/notebooks/08_prediction_interval.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "*More information about CapyMOA can be found at* https://www.capymoa.org.\n",
     "\n",
-    "**last updated on 24/11/2025**"
+    "**last updated on 28/11/2025**"
    ]
   },
   {
@@ -37,15 +37,7 @@
      "shell.execute_reply": "2024-09-23T00:32:02.936760Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "fried.arff: 904kB [00:01, 583kB/s]                            \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from capymoa.datasets import Fried\n",
     "\n",
@@ -58,7 +50,7 @@
    "id": "c7281268a7d3a18f",
    "metadata": {},
    "source": [
-    "## 1. Basic prediction interval usage\n",
+    "## 8.1 Basic prediction interval usage\n",
     "\n",
     "* Here is an example of prediction intervals in CapyMOA.\n",
     "* Currently available prediction interval learners require a regressor base model."
@@ -101,9 +93,9 @@
    "id": "bc4f6d6782c59a0",
    "metadata": {},
    "source": [
-    "## 2. Creating evaluators\n",
+    "## 8.2 Creating evaluators\n",
     "\n",
-    "* We involve two types of prediction interval evaluators so far: basic (cumulative) and windowed"
+    "* There are currently two types of prediction interval evaluators implemented: basic (cumulative) and windowed."
    ]
   },
   {
@@ -141,9 +133,9 @@
    "id": "e92bd015e9972610",
    "metadata": {},
    "source": [
-    "## 3. Running test-then-train/prequential tasks manually\n",
+    "## 8.3 Running test-then-train/prequential tasks manually\n",
     "\n",
-    "**don't forget to train the models (call .train() function) at the end!**"
+    "* **Don't forget to train the models (call .train() function) at the end!**"
    ]
   },
   {
@@ -178,7 +170,7 @@
    "id": "c8236432f04ed931",
    "metadata": {},
    "source": [
-    "## 4. Results from both evaluators"
+    "## 8.4 Results from both evaluators"
    ]
   },
   {
@@ -225,9 +217,9 @@
    "id": "7ccb662accd55ba9",
    "metadata": {},
    "source": [
-    "## 5. Wrap things up with prequential evaluation\n",
+    "## 8.5 Wrap things up with prequential evaluation\n",
     "\n",
-    "* Prediction interval tasks also can be wrapped up with prequential evaluation in CapyMOA"
+    "* Prediction interval tasks also can be wrapped into prequential evaluation in CapyMOA."
    ]
   },
   {
@@ -291,7 +283,7 @@
    "id": "b11164ccae50abab",
    "metadata": {},
    "source": [
-    "## 6. Plots are also supported"
+    "## 8.6 Plots are also supported"
    ]
   },
   {
@@ -345,11 +337,11 @@
    "id": "edd8e19975efa1be",
    "metadata": {},
    "source": [
-    "### Plotting prediction intervals over time\n",
+    "### 8.6.1 Plotting prediction intervals over time\n",
     "\n",
-    "* We also provide a visualization tool for plotting prediction intervals over time\n",
-    "* The function `plot_prediction_interval` can be used to plot the prediction intervals over time\n",
-    "* The function can take one of two prediction interval results as input"
+    "* We also provide a visualisation tool for plotting prediction intervals over time.\n",
+    "* The function `plot_prediction_interval` can be used to plot the prediction intervals over time.\n",
+    "* This function can take one of two prediction interval results as input."
    ]
   },
   {
@@ -357,21 +349,22 @@
    "id": "d5d17ff9c62ab289",
    "metadata": {},
    "source": [
-    "#### Single result plotting example\n",
-    "* In order to plot the prediction interval over time, we need to have store the predictions and the ground truth values in the prediction interval results\n",
-    "* The shaded area represents the prediction interval, while the solid line represents the regressive predictions.\n",
-    "* The stared-markers represent the ground truth values that are covered by the intervals.\n",
-    "* On the other hand, the cross-markers represent the ground truth values that are outside the intervals. \n",
+    "### 8.6.2 Single result plotting example\n",
+    "\n",
+    "* In order to plot the prediction interval over time, we need to have stored the predictions and the ground truth values in the prediction interval results.\n",
+    "* The shaded area represents the prediction interval, while the solid line represents the regressor's predictions.\n",
+    "* The star markers represent the ground truth values that are covered by the intervals.\n",
+    "* On the other hand, the cross markers represent the ground truth values that are outside the intervals. \n",
     "* The colors can be adjusted by the `colors` parameter in the function as a list.\n",
     "* `start` and `end` parameters can be used to specify the range of the plot.\n",
     "* The `ground truth` and `predictions` can be omitted by setting the `plot_truth` and `plot_predictions` parameters to `False`.\n",
     "\n",
-    "**We have to set `optimise` to `Flase` to avoid subscribing problems**"
+    "**We have to set `optimise` to `False` to avoid subscribing problems**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a88688919a76f672",
    "metadata": {
     "ExecuteTime": {
@@ -440,10 +433,10 @@
    "id": "26a8a1d1d1700cfe",
    "metadata": {},
    "source": [
-    "#### Two results plotting example\n",
+    "### 8.6.3 Two results plotting example\n",
     "\n",
     "* For comparison purposes, we can also plot two prediction interval results over time.\n",
-    "* We don't take more results since it makes the plot too messy to read."
+    "* We don't offer the ability to take more than two since it makes the plot too messy to read."
    ]
   },
   {
@@ -524,7 +517,7 @@
    "id": "81b60bff0bf321ec",
    "metadata": {},
    "source": [
-    "* New \"plus\" markers represent the ground truth values that are covered by the narrower but not by wider intervals. \n",
+    "* New plus markers represent the ground truth values that are covered by the narrower but not the wider intervals. \n",
     "* The function automatically puts the wider area to the back to make the narrower intervals more visible."
    ]
   },
