docs: review numbering, grammar and fix anom detection test

--- a/notebooks/anomaly_detection.ipynb
+++ b/notebooks/anomaly_detection.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "---\n",
     "\n",
-    "*More information about CapyMOA can be found at* https://www.capymoa.org\n",
+    "*More information about CapyMOA can be found at* https://www.capymoa.org.\n",
     "\n",
     "**last update on 28/11/2025**"
    ]
@@ -27,7 +27,7 @@
    "source": [
     "## 1. Creating simple anomalous data with `sklearn`\n",
     "\n",
-    "* Generating a few examples and some simple anomalous data using `sklearn`"
+    "* Generating a few examples and some simple anomalous data using `sklearn`."
    ]
   },
   {
