--- a/notebooks/clustering.ipynb
+++ b/notebooks/clustering.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "---\n",
     "\n",
-    "*More information about CapyMOA can be found at* https://www.capymoa.org\n",
+    "*More information about CapyMOA can be found at* https://www.capymoa.org.\n",
     "\n",
     "**last update on 28/11/2025**"
    ]
