--- a/notebooks/SSL_example.ipynb
+++ b/notebooks/SSL_example.ipynb
@@ -135,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "<capymoa.evaluation.results.PrequentialResults at 0x7c820ad51010>"
+       "<capymoa.evaluation.results.PrequentialResults at 0x75269353d160>"
       ]
      },
      "metadata": {},
