docs: address pr comments, nb05, inv/task null

--- a/notebooks/05_new_learner.ipynb
+++ b/notebooks/05_new_learner.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "*More information about CapyMOA can be found at* https://www.capymoa.org.\n",
     "\n",
-    "**last update on 20/11/2025**"
+    "**last update on 04/12/2025**"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "id": "96cb3df1-190c-49ea-959b-292559df13e6",
    "metadata": {},
    "source": [
-    "## 1. Creating the classifier\n",
+    "## 5.1 Creating the classifier\n",
     "\n",
     "* The first step is to extend the `Classifier` abstract class from `capymoa.base` and implement the required methods:\n",
     "  * ```__init__(self, schema=None, random_seed=1, ...)```\n",
@@ -138,7 +138,7 @@
    "id": "a4ff1ac9-07a1-4a0b-9bb5-f2afa79dd928",
    "metadata": {},
    "source": [
-    "## 3. Evaluating the classifier\n",
+    "## 5.2 Evaluating the classifier\n",
     "\n",
     "* We use the same approach as when we evaluate any other CapyMOA learner.\n",
     "* We show how it is simple to use learners with different backends in our implementation, e.g.,\n",
@@ -218,7 +218,7 @@
    "id": "c99c28f5-0eb7-49f1-b38b-7e6891d5f30a",
    "metadata": {},
    "source": [
-    "## 4. CustomOnlineBagging and OnlineBagging\n",
+    "## 5.3 CustomOnlineBagging and OnlineBagging\n",
     "\n",
     "* Testing and training our custom online bagging implementation alongside the online bagging implementation from `capymoa.classifier.OnlineBagging`."
    ]
